--- a/BasicUI2/app/src/main/res/layout/activity_bat_list.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_bat_list.xml
@@ -4,7 +4,64 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:textColor="@color/white"
+        android:background="@color/red_orange"
+        android:text="Lista de Puntos"
+        android:textSize="18sp"
+        android:textAlignment="center" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:weightSum="6">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/red_orange"
+            android:textAlignment="center"
+            android:text="Cantidad"
+            android:textColor="@color/white"
+            android:layout_weight="2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/red_orange"
+            android:text="Batería"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_weight="2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/red_orange"
+            android:text="Puntos"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:layout_weight="2"/>
+    </LinearLayout>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="361dp"
+        android:dividerHeight="2dp"
+        android:divider="@color/black"
+        android:padding="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/lvPoints"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:onClick="back"/>
 
 
 </LinearLayout>
