--- a/BasicUI2/app/src/main/res/layout/activity_rlocation.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_rlocation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".addRecyclingPoint"
+    tools:context=".RLocation"
     android:weightSum="2">
 
     <TextView
@@ -21,7 +21,6 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="241dp"
-        android:layout_marginTop="15dp"
         android:contentDescription="@null"
         android:paddingStart="-20dp"
         android:src="@mipmap/ic_map_example_2" />
@@ -32,28 +31,28 @@
         android:orientation="horizontal"
         android:weightSum="5">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/red_orange"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/red_orange"
+            android:text="@string/address_row"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_weight="2"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/red_orange"
-            android:text="Location"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:layout_weight="1.5"/>
-        <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/red_orange"
             android:text="Distance"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:layout_weight="1.5"/>
+            android:layout_weight="2"/>
     </LinearLayout>
 
     <LinearLayout
@@ -80,9 +79,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="60dp"
         android:onClick="addRecyclePoint"
-        android:text="Add" />
+        android:text="@string/for_exit" />
 
 </LinearLayout>
