--- a/BasicUI2/app/src/main/res/layout/activity_bat_list.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_bat_list.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="4">
 
     <TextView
         android:id="@+id/textView2"
@@ -12,7 +13,9 @@
         android:background="@color/red_orange"
         android:text="Lista de Puntos"
         android:textSize="18sp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_weight="0.5"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,46 +24,63 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:weightSum="6">
+        android:weightSum="6"
+        android:layout_weight="0.5">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
-            android:textAlignment="center"
+            android:gravity="center"
             android:text="Cantidad"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_weight="2"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
+            android:gravity="center"
             android:text="Batería"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_weight="2"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
+            android:gravity="center"
             android:text="Puntos"
-            android:textColor="@color/white"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:layout_weight="2"/>
     </LinearLayout>
 
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="361dp"
-        android:dividerHeight="2dp"
-        android:divider="@color/black"
-        android:padding="5dp"
+        android:layout_height="180dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="0dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:id="@+id/lvPoints"/>
+        android:layout_weight="2.5"
+        android:weightSum="1">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dividerHeight="2dp"
+            android:divider="@color/black"
+            android:id="@+id/lvPoints"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
+        android:layout_marginTop="30dp"
         android:text="OK"
+        android:layout_weight="0.5"
         android:onClick="back"/>
 
 
