--- a/BasicUI2/app/src/main/res/layout/activity_main.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".MainActivity">
-
-    <EditText
-        android:id="@+id/etSend2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="Password"
-        app:layout_constraintEnd_toEndOf="@+id/etSend"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/etSend"
-        app:layout_constraintTop_toBottomOf="@+id/etSend" />
-
-    <Button
-        android:id="@+id/btnFizz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:onClick="send"
-        android:text="send"
-        app:layout_constraintEnd_toEndOf="@+id/etSend"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="@+id/etSend"
-        app:layout_constraintTop_toBottomOf="@+id/etSend2" />
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/etSend"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="64dp"
         android:ems="10"
         android:inputType="text"
-        android:hint="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="Name"/>
 
+    <EditText
+        android:id="@+id/etSend2"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="Password" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnFizz"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:onClick="send"
+        android:text="send" />
+
+</LinearLayout>
