--- a/BasicUI2/app/src/main/res/layout/activity_points_summary.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_points_summary.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </TableLayout>
+
     <Button
         android:layout_gravity="center"
         android:layout_width="wrap_content"
