--- a/BasicUI2/app/src/main/res/layout/activity_rlocation.xml
+++ b/BasicUI2/app/src/main/res/layout/activity_rlocation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".RLocation"
-    android:weightSum="2">
+    android:weightSum="4">
 
     <TextView
         android:id="@+id/textView2"
@@ -15,7 +15,8 @@
         android:textColor="@color/white"
         android:background="@color/red_orange"
         android:text="Puntos de reciclaje"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_weight="0.1"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,23 +24,25 @@
         android:layout_height="241dp"
         android:contentDescription="@null"
         android:paddingStart="-20dp"
+        android:layout_weight="3.4"
         android:src="@mipmap/ic_map_example_2" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="5">
+        android:weightSum="5"
+        android:layout_weight="0.1">
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_weight="1"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
             android:text="@string/address_row"
             android:textAlignment="center"
@@ -47,7 +50,7 @@
             android:layout_weight="2"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/red_orange"
             android:text="Distance"
             android:textColor="@color/white"
@@ -61,7 +64,8 @@
         android:layout_height="215dp"
         android:layout_marginTop="0dp"
         android:orientation="vertical"
-        android:textAlignment="center">
+        android:textAlignment="center"
+        android:layout_weight="0.3">
 
 
         <ListView
@@ -77,11 +81,12 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="60dp"
         android:onClick="addRecyclePoint"
-        android:text="@string/for_exit" />
+        android:text="@string/for_exit"
+        android:layout_weight="0.1"/>
 
 </LinearLayout>
